# libhermit

./: .bintray_descriptor.json  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  CNAME  Dockerfile  Highlight test  Highlight test~  Makefile  Makefile.in  README.md  _config.yml  blog.html  getting-started.md  imprint.md  index.html  index.md  members.html  test.sh  tests.sh  travis_test.sh
_data/: members.yml  navigation.yml
_includes/: altmetric.html  analytics.html  footer.html  nav.html
_layouts/: default.html  home.html  notebook.html  post.html  slide.html
_posts/: 2016-04-19-OpenMP-Support.md  2016-04-19-iRCCE-Support.md  2016-06-01-ROSS.md  2016-09-10-Go-Support.md  2016-09-20-Hypervisor.md  2017-01-24-COSCH2017.md  2017-01-24-COSH2017.md  2017-02-03-OpenPositions.md  2017-03-26-Tutorial.md  2017-06-16-HPC-meets-Cloud-Computing.md  2017-06-25-OPENSUCO.md
about/: index.md
arch/aarch64/: CMakeLists.txt
arch/aarch64/include/asm/: atomic.h  atomic32.h  atomic64.h  io.h  irq.h  irqflags.h  limits.h  page.h  pci.h  processor.h  stddef.h  string.h  tasks.h  tasks_types.h  time.h  uart.h  uhyve.h
arch/aarch64/kernel/: Makefile  entry.S  irq.c  processor.c  signal.c  signal.dep  tasks.c  tasks.dep  timer.c  timer.dep  uart.c  uart.dep
arch/aarch64/libfdt/: libfdt_env.h
arch/aarch64/libkern/: Makefile  memcpy.S  memset.S  strlen.S
arch/aarch64/mm/: Makefile  memory.c  memory.dep  page.c  page.dep  vma.c  vma.dep
arch/x86/: Kbuild
arch/x86_64/: CMakeLists.txt
cmake/: HermitCore-Configuration.cmake  HermitCore-Toolchain-aarch64.cmake  HermitCore-Toolchain-x86_64.cmake  HermitCore.cmake  README.md  local-cmake.sh
config/: linux_config
css/: bootstrap.css  bootstrap.min.css  clean-blog.css  syntax.css
docker/: Dockerfile
drivers/net/: e1000.c  mmnif.c  rtl8139.c  uhyve-net.c  uhyve-net.h  vioif.c
getting-started/: index.md
hermit/: Makefile
hermit/initrd/: .gitignore  Makefile  initrd.sh
hermit/newlib/src/newlib/libc/sys/hermit/: Makefile.am  Makefile.in  _exit.c  chown.c  close.c  config.h  configure  configure.in  crt0.asm  dup.c  dup2.c  errno.c  execve.c  fork.c  fstat.c  getpid.c  gettod.c  init.c  isatty.c  kill.c  link.c  lseek.c  open.c  pthread_init.c  read.c  readlink.c  sbrk.c  stat.c  symlink.c  syscall.h  times.c  unlink.c  wait.c  write.c
hermit/newlib/src/newlib/libc/sys/hermit/include/sys/: dirent.h
imprint/: index.md
include/: pte_types.h  pthread.h
include/hermit/: CMakeLists.txt  config.h.in  ibv.h  ibv_eth_cm.h  ibv_guest_host.h  ibv_struct_address_conversion.h  ibv_struct_member_address_conversion.h  ibv_virt_phys.h  memory.h  pte_types.h  pthread.h  semaphore.h  semaphore_types.h  spinlock.h  spinlock_types.h  stddef.h  tasks.h  time.h  verbs.h  virtio_types.h  vma.h
include/netinet/: in.h
init/: main.c
kernel/: Makefile  ibv.c  ibv_eth_cm.c  ibv_guest_host.c  ibv_struct_address_conversion.c  ibv_struct_member_address_conversion.c  ibv_virt_phys.c  main.c  netio.c  syscall.c  tasks.c
libkern/: printf.c  stdio.c
librs/src/: macros.rs
mm/: malloc.c  vma.c
plugin/markdown/: example.html  example.md
plugin/projector/: README.md
proxy/: CMakeLists.txt  Cargo.toml
proxy/src/: main.rs
proxy/src/hermit/: mod.rs  proto.rs  socket.rs  utils.rs
proxy/src/hermit/uhyve/: mod.rs  proto.rs  uhyve.rs  vm.rs
scripts/mod/: modpost.c
search/: index.html
tools/: CMakeLists.txt  proxy.c  proxy.h  queue.h  uhyve-aarch64.c  uhyve-cpu.h  uhyve-gdb-aarch64.c  uhyve-gdb-aarch64.h  uhyve-gdb-x86_64.c  uhyve-gdb-x86_64.h  uhyve-gdb.h  uhyve-ibv-guest-host.c  uhyve-ibv-guest-host.h  uhyve-ibv.c  uhyve-ibv.c~  uhyve-ibv.h  uhyve-migration-rdma.c  uhyve-migration.c  uhyve-migration.h  uhyve-net.c  uhyve-net.h  uhyve-x86_64.c  uhyve.c  uhyve.h  utils.c
tools/hermit_proxy/: CMakeLists.txt  Cargo.toml
tools/hermit_proxy/cmake/: Findrustc.cmake  Rust.cmake
tools/hermit_proxy/src/: daemon.rs  error.rs  hermit.rs  logger.rs  main.rs  multi.rs  proto.rs  qemu.rs  socket.rs  utils.rs
tools/hermit_proxy/src/dedicate/: mod.rs  multi.rs  proto.rs  qemu.rs  socket.rs
tools/hermit_proxy/src/hermit/: error.rs  hermit_env.rs  mod.rs  multi.rs  proto.rs  qemu.rs  socket.rs  utils.rs
tools/hermit_proxy/src/hermit/uhyve/: gdt.rs  kvm_header.rs  proto.rs  uhyve.rs  vcpu.rs  vm.rs
tools/hermit_proxy/src/uhyve/: gdt.rs  kvm_header.rs  mod.rs  proto.rs  uhyve.rs  vcpu.rs  vm.rs
tools/ibv_code_generator/: GEN-include-hermit-stddef.h  GEN-kernel-header.h  GEN-kernel-ibv.c  GEN-kernel.c  GEN-tools-uhyve-ibv-ports.h  GEN-tools-uhyve-ibv-structs.h  GEN-tools-uhyve-ibv.c  GEN-tools-uhyve.c  GEN_include_hermit_stddef.h  GEN_kernel_ibv.c  GEN_tools_uhyve-ibv.h  GEN_tools_uhyve.c  custom_snippets.py  function-prototypes-0.txt  function-prototypes-1.txt  function-prototypes.txt  generate-code.py  generate-code_clean.py  generate_code.py  ibv_gen.c  kernel_api.py  parser.py  verbs-0.h  verbs_ptr_structs.h
usr/benchmarks/: CMakeLists.txt  basic.c  stream.c  taskswitch.c
usr/benchmarks/ib/: get_clock.c  perftest_communication.c  perftest_communication.h  perftest_communication_write_bw.c  perftest_communication_write_bw.h  perftest_parameters.c  perftest_parameters.h  perftest_parameters_write_bw.c  perftest_parameters_write_bw.h  perftest_resources.c  perftest_resources.h  perftest_resources_write_bw.c  perftest_resources_write_bw.h  read_bw.c  read_lat.c  wr_bw.c  wr_bw.h  write_bw.c  write_lat.c
usr/benchmarks/ib/evaluation/: README.md  client.py  config.py  parse_results.py  plot_test.py  server.py
usr/ircce/: CMakeLists.txt
usr/lighttpd-1.4.45/: Makefile.in  (+4 more)
usr/lighttpd-1.4.45/src/: CMakeLists.txt  Makefile.in  buffer.h
usr/rdma-core/libibverbs/: CMakeLists.txt
usr/tests/: CMakeLists.txt  Makefile  allocator.c  endless.c  hello.c  ib-test.c  ib_test.c  jacobi.c  nweb23.c  ping.c  test-malloc-mt.c  thr_hello.c
usr/tests/ib/: pingpong-rc.c  pingpong-ud.c  pingpong.c  pingpong.h  pingpong_ud.c  rc_pingpong.c  srq_eth_cm_pingpong.c  srq_pingpong.c  uc_pingpong.c  ud_pingpong.c  xsrq_pingpong.c
(+2205 files in other folders)
